# PvPBot_Training

./: .gitignore  README.md  main.py  pyproject.toml
docs/: implementation_plan.md  java_api_spec.md
reports/: phase4_scenario_summary.txt
reports/metrics/: phase1_threshold_sweep.csv
scripts/: _bootstrap.py  assert_phase4_scenarios.py  build_features.py  evaluate_model.py  prepare_data.py  rebuild_phase2_and_train_phase4.py  run_inference_api.py  run_phase4_scenario_report.py  sweep_thresholds.py  train_model.py
src/bot_training/: __init__.py  config.py
src/bot_training/data/: loader.py  preprocessing.py  threshold_sweep.py
src/bot_training/evaluation/: evaluate.py
src/bot_training/features/: __init__.py  build_features.py
src/bot_training/inference/: api.py  predict.py
src/bot_training/models/: __init__.py  pvp_sequence_model.py
src/bot_training/training/: __init__.py  phase4.py  train.py
tests/: test_phase1_preprocessing.py  test_phase1_threshold_sweep.py  test_phase2_feature_engineering.py  test_phase3_mlx_pvp_sequence_model.py  test_phase4_scenario_report.py  test_phase4_training.py  test_scaffold.py
