[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot-training"
version = "0.1.0"
description = "PvP bot AI model training scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.3",
    "mlx>=0.31.1",
    "numpy>=1.26",
    "pandas>=2.0",
    "pytest>=9.0.2",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

